Release notes by PHOCOA version number.

Legend:
[bugfix] - Bug fix.
[new] - New feature.
[BC-break] - Backwards-compatibility may be broken. Update your code to "the new way" as noted.
[BC-deprecated] - Backwards-compatibility mode supported, but deprecated. Update your code to "the new way" as noted.

Version 0.3.1 - ??

Version 0.3.0 - 10/1/2009
- [bugfix] YUI Overlay (and subclasses) with fixedcenter=true and initial visibility=false would sometimes cause horizontal scrollbars on the document since YUI only re-calculates the center position if visible. We now force-recalculate this after rendering and the bug is gone!
- [bugfix] PhocoaDialog uploads now work on IE.

Version 0.2.9 - 9/25/2009
- [new] Rearrange PhocoaDialog javascript module to use the -min and -debug versions via YUILoader. Previously the minified version was never used.
- [bugfix] PhocoaDialog now supports file uploads.

Version 0.2.8 - 9/22/2009
- [new] Add new ValueTransformer: WFEmptyToNullTransformer
- [bugfix] NullPlaceholder in bindings now works with mutli-value pattern bindings, so if you have ValuePattern: '%1% credits', it used to turn into ' credits' but now it will be properly replaced with the NullPlaceholder
- [bugfix] Fix bug with KVC magic array operators not working on WFArray instances.
- [bugfix] Fix bug in WFFixture/YAML where "named" objects created *not* at the top level of the YAML were incorrectly storing the "parent" instance.
- [new] Add an arrangedObjectsHash method to WFArrayController so that managed objects can be easily iterated over with their IDs, including compound keys.
- [bugfix] Fix bug where WFRPC parameters were not URL-escaped causing incorrect parameter data to be passed if the data contained an & character.

Version 0.2.7 - ??
- [new] Add loading indicator to WFYAHOO_widget_TreeViewNode
- [new] Add "no matches" indicator to WFYAHOO_widget_TreeViewNode + WFSearchField