@@ -7,6 +7,7 @@ Legend:
 [BC-deprecated] - Backwards-compatibility mode supported, but deprecated. Update your code to "the new way" as noted.
 
 Version 0.3.1 - ??
+- [bugfix] NullPlaceholder settings from one binding no longer "inject" themselves into other bindings on the same widget that don't have NullPlaceholder's.
 
 Version 0.3.0 - 10/1/2009
 - [bugfix] YUI Overlay (and subclasses) with fixedcenter=true and initial visibility=false would sometimes cause horizontal scrollbars on the document since YUI only re-calculates the center position if visible. We now force-recalculate this after rendering and the bug is gone!
